--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -5,9 +5,49 @@
 <div id="mainHome" class="container text-center mt-5">
   <div class="welcome-container px-5">
     <h1 class="mb-4"><%= heading %></h1>
-    <p class="squigly text-warning">\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/</p>
+    <div class="my-4">
+      <svg
+        width="100%"
+        height="40"
+        viewBox="0 0 600 40"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M0,20 
+           Q50,0 100,20 
+           T200,20 
+           T300,20 
+           T400,20 
+           T500,20 
+           T600,20"
+          fill="transparent"
+          stroke="#ffc107"
+          stroke-width="4"
+        />
+      </svg>
+    </div>
     <p class="py-2 px-5"><%= welcomeParagraph %></p>
-    <p class="squigly text-warning">\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/</p>
+    <div class="my-4">
+      <svg
+        width="100%"
+        height="40"
+        viewBox="0 0 600 40"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M0,20 
+           Q50,0 100,20 
+           T200,20 
+           T300,20 
+           T400,20 
+           T500,20 
+           T600,20"
+          fill="transparent"
+          stroke="#ffc107"
+          stroke-width="4"
+        />
+      </svg>
+    </div>
   </div>
 
   <div class="card-container justify-content-center d-flex gap-3 flex-wrap">
