--- a/views/pages/thankyou.ejs
+++ b/views/pages/thankyou.ejs
@@ -1,14 +1,17 @@
 <!--Thank You: Confirmation page after form submission-->
 
 <%- include('../partials/header') %>
+
 <div id="mainThank" class="container mt-5 d-flex flex-column justify-content-center align-items-center">
     <div class="thankYouMessage text-center">
         <h1>Thank You!</h1>
         <p>Your message has been received. We appreciate your feedback and will get back to you shortly.</p>
+
+        <!--Link to return to home-->
         <a href="/" class="btn btn-primary mt-3 text-dark bg-warning hover-btn border-dark">Go Back Home</a>
     </div>
 
-    <!-- Message about redirecting -->
+    <!-- Message about redirecting user to home -->
     <div class="alert alert-info mt-3 bg-warning text-dark border-dark bg-opacity-75 container mt-5 d-flex flex-column justify-content-center align-items-center w-50">
         <strong>Note:</strong> You will be redirected to the home page in 1 minute.
 
@@ -20,4 +23,5 @@
         </script>
     </div>
 </div>
+
 <%- include('../partials/footer') %>
